# TaiJie

./: .travis.yml  README.md
document/: 台阶接口规范.docx  台阶算法设计.xlsx  纸牌的英文描述.txt
src/client/: README.md
src/client/app/: build.gradle
src/client/app/src/androidTest/java/com/moodwu/taijie/: ApplicationTest.java
src/client/app/src/main/: AndroidManifest.xml
src/client/app/src/main/java/com/moodwu/taijie/: Hello.java  LoginActivity.java  MainActivity.java
src/client/app/src/main/jni/: Android.mk  com_moodwu_taijie_Hello.cpp  com_moodwu_taijie_Hello.h
src/client/app/src/main/res/layout/: activity_login.xml  activity_main.xml
src/client/app/src/main/res/menu/: menu_login.xml
src/client/app/src/main/res/values/: strings.xml
src/client/gradle/wrapper/: gradle-wrapper.properties
src/sdk/: README.md
src/sdk/LFC/: Package.sh
src/sdk/LFC/Common/: Makefile
src/sdk/LFC/Common/Include/: Assert.h  AutoPtr.h  Common.h  EventEngine.h  EventThread.h  FileWatch.h  InetListenSocket.h  InetSocket.h  Macro.h  Mutex.h  Semaphore.h  SharedPtr.h  SocketAddr.h  TCPClientSocket.h  TCPSocket.h  Thread.h  UnixListenSocket.h  UnixSocket.h  UrlCodec.h  XmlParser.h
src/sdk/LFC/Common/Source/: Archive.cpp  Argv.cpp  Buffer.cpp  EventThread.cpp  FileWatch.cpp  InetSocket.cpp  Listener.cpp  MemLeakDetect.cpp  MessageEvent.cpp  Mutex.cpp  STR.cpp  Semaphore.cpp  Socket.cpp  SocketAddr.cpp  SocketUtil.cpp  TCPClientSocket.cpp  ThreadPool.cpp  Timer.cpp  Tinyxml2.cpp  UnixListenSocket.cpp  UnixSocket.cpp  XmlParser.cpp
src/sdk/LFC/Framework/Include/: ClientEvent.h
src/sdk/LFC/Framework/Project/: Framework.vcproj
src/sdk/LFC/Framework/Source/: ClientEvent.cpp  FrameServer.cpp
src/sdk/LFC/Http/: Build.sh  CMakeLists.txt
src/sdk/LFC/Http/Include/: HttpClientEvent.h  HttpCode.h  HttpMessage.h  HttpResMessage.h
src/sdk/LFC/Http/Source/: HttpCode.cpp  HttpFrameServer.cpp  HttpMessage.cpp  HttpReqMessage.cpp  HttpResMessage.cpp
src/sdk/LFC/Log/: Build.sh  CMakeLists.txt
src/sdk/LFC/Log/Source/: Log.cpp
src/sdk/LFC/Lua/: Build.sh  CMakeLists.txt
src/sdk/LFC/Lua/Include/: LuaArg.h
src/sdk/LFC/Lua/Source/: Lua.cpp
src/sdk/LFC/MySQL/: Build.sh  CMakeLists.txt
src/sdk/LFC/MySQL/Source/: MySQL.cpp
src/sdk/LFC/Rtsp/: CMakeLists.txt
src/sdk/LFC/Rtsp/Include/: RtspCode.h  RtspMessageParser.h  RtspResMessage.h
src/sdk/LFC/Rtsp/Source/: RtspClientEvent.cpp  RtspFrameServer.cpp  RtspMessage.cpp
src/sdk/LFC/Test/: Test.cpp
src/sdk/app_sdk/: CMakeLists.txt  Makefile  build.sh
src/sdk/app_sdk/include/: IGame.h
src/sdk/app_sdk/lib/: README.md
src/sdk/app_sdk/project/: app_sdk.sln  app_sdk.vcproj
src/sdk/app_sdk/source/: README.md
src/sdk/app_sdk/source/game/: Game.cpp  Game.h  MsgHelper.cpp  MsgHelper.h
src/sdk/app_sdk/source/parser/: Parser.cpp  Parser.h
src/sdk/app_sdk/source/socket/: Client.cpp  Client.h
src/sdk/message_sdk/project/: message_sdk.sln  message_sdk.vcproj
src/server/: CMakeLists.txt  Makefile  README.md  build.sh
src/server/project/: server.sln  server.vcproj
src/server/source/link/: Link.cpp  Link.h
src/server/source/rpc/: Rpc.h
src/server/source/session/: Session.h  SessionMgr.cpp  SessionMgr.h
src/server/source/startup/: Application.cpp  Application.h  Main.cpp
src/server/source/user/: User.cpp  User.h  UserMgr.cpp  UserMgr.h
