CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_CXX_FLAGS         "-g3 -Wall")
SET(CMAKE_CXX_FLAGS_DEBUG   "-g3 -Wall")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2 -Wall -DNDEBUG")
SET(LIBRARY_OUTPUT_PATH     ${PROJECT_SOURCE_DIR}/Lib)
INCLUDE_DIRECTORIES(LFC)

SET(SOURCE_FILES
	Source/MySQL.cpp
)

SET(INCLUDE_FILES
	Include/MySQL.h
)

ADD_LIBRARY(MySQL STATIC ${SOURCE_FILES} ${INCLUDE_FILES})
